--- a/src/main/resources/assets/jacobsmod/lang/en_us.json
+++ b/src/main/resources/assets/jacobsmod/lang/en_us.json
@@ -3,7 +3,6 @@
   "item.jacobsmod.raw_omnium": "Raw Omnium",
   "block.jacobsmod.omnium_block": "Block of Omnium",
   "block.jacobsmod.raw_omnium_block": "Block of Raw Omnium",
-  "item.jacobsmod.tomato_seeds": "Tomato Seeds",
   "item.jacobsmod.metal_detector": "Metal Detector",
   "block.jacobsmod.sound_block": "Sound Block",
   "item.jacobsmod.tomato": "Tomato",
@@ -12,6 +11,15 @@
   "tooltip.jacobsmod.metal_detector.tooltip": " Finds valuable ore",
 
   "item.jacobsmod.omnium_staff": "Omnium Staff",
+
+  "item.jacobsmod.omnium_sword": "Omnium Sword",
+  "item.jacobsmod.omnium_pickaxe": "Omnium Pickaxe",
+  "item.jacobsmod.omnium_axe": "Omnium Axe",
+  "item.jacobsmod.omnium_shovel": "Omnium Shovel",
+  "item.jacobsmod.omnium_hoe": "Omnium Hoe",
+
+  "item.jacobsmod.tomato_seeds": "Tomato Seeds",
+
 
   "block.jacobsmod.omnium_ore": "Omnium Ore",
   "block.jacobsmod.deepslate_omnium_ore": "Deepslate Omnium Ore",
